# thesis_model

./: CLAUDE.md  Cargo.toml  README.md
ml_app/: Cargo.toml
ml_app/src/: main.rs
ml_core/: Cargo.toml
ml_core/data/: test.csv
ml_core/src/: data.rs  lib.rs  model.rs  training.rs
ml_core/src/data/: batcher.rs  dataset.rs  preprocessing.rs  source.rs
ml_core/src/model/: arch.rs
ml_core/src/training/: training.rs
