[workspace]
members = [
    "ml_core",
    "ml_app"
]
resolver = "2"

[workspace.dependencies]
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.3"
anyhow = "1.0.103"
burn = {version = "0.21.0", features = ["wgpu", "dataset", "ndarray"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
